SERVER-8239 $concat should only support strings