src/mongo/db/pipeline/expression.cpp
@@ -741,6 +741,13 @@ namespace mongo {
         StringBuilder result;
         for (size_t i = 0; i < n; ++i) {
             Value val = vpOperand[i]->evaluate(input);
+            if (val.nullish())
+                return Value(BSONNULL);
+
+            uassert(16702, str::stream() << "$concat only supports strings, not "
+                                         << typeName(val.getType()),
+                    val.getType() == String);
+
             result << val.coerceToString();
         }
 
